🚀 Change ByteBuffer to managed with ThreadLocal